Fixed bug #72629 (Caught exception assignment to variables ignores references).